--- a/src/index.html
+++ b/src/index.html
@@ -294,22 +294,91 @@
                 </button>
               </div>
             </div>
-            <div class="bg-gradient-to-r from-secondary from-[.5rem] via-primary via-[.5rem] to-primary rounded-[10px] h-52 w-72 md:w-auto  shadow-md shadow-shadow_color">
-
+            <div class="bg-gradient-to-r from-secondary from-[.5rem] via-primary via-[.5rem] to-primary rounded-[10px] h-52 w-72 md:w-auto shadow-md shadow-shadow_color relative p-5 grid grid-rows-[auto_2.25rem]">
+              <div class="row-span-1 flex flex-col gap-2">
+                <p class="font-bold text-icon_color line-clamp-1">Less Cool Project</p>
+                <p class="line-clamp-4 text-sm text-icon_color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus animi non inventore nam eligendi, sed totam exercitationem natus saepe! Esse eum assumenda perspiciatis alias ex. Totam labore necessitatibus laudantium incidunt.</p>
+              </div>
+              <div class="row-span-1 flex flex-row justify-end gap-3">
+                <button title="Add to Favorites"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="star" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+                <button title="View"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="eye" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+                <button title="Branch"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="git-branch" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+              </div>
             </div>
-            <div class="bg-gradient-to-r from-secondary from-[.5rem] via-primary via-[.5rem] to-primary rounded-[10px] h-52 w-72 md:w-auto  shadow-md shadow-shadow_color">
-
+            <div class="bg-gradient-to-r from-secondary from-[.5rem] via-primary via-[.5rem] to-primary rounded-[10px] h-52 w-72 md:w-auto shadow-md shadow-shadow_color relative p-5 grid grid-rows-[auto_2.25rem]">
+              <div class="row-span-1 flex flex-col gap-2">
+                <p class="font-bold text-icon_color line-clamp-1">Impossible Project</p>
+                <p class="line-clamp-4 text-sm text-icon_color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus animi non inventore nam eligendi, sed totam exercitationem natus saepe! Esse eum assumenda perspiciatis alias ex. Totam labore necessitatibus laudantium incidunt.</p>
+              </div>
+              <div class="row-span-1 flex flex-row justify-end gap-3">
+                <button title="Add to Favorites"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="star" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+                <button title="View"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="eye" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+                <button title="Branch"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="git-branch" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+              </div>
             </div>
-            <div class="bg-gradient-to-r from-secondary from-[.5rem] via-primary via-[.5rem] to-primary rounded-[10px] h-52 w-72 md:w-auto  shadow-md shadow-shadow_color">
-
+            <div class="bg-gradient-to-r from-secondary from-[.5rem] via-primary via-[.5rem] to-primary rounded-[10px] h-52 w-72 md:w-auto shadow-md shadow-shadow_color relative p-5 grid grid-rows-[auto_2.25rem]">
+              <div class="row-span-1 flex flex-col gap-2">
+                <p class="font-bold text-icon_color line-clamp-1">Easy Peasy App</p>
+                <p class="line-clamp-4 text-sm text-icon_color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus animi non inventore nam eligendi, sed totam exercitationem natus saepe! Esse eum assumenda perspiciatis alias ex. Totam labore necessitatibus laudantium incidunt.</p>
+              </div>
+              <div class="row-span-1 flex flex-row justify-end gap-3">
+                <button title="Add to Favorites"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="star" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+                <button title="View"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="eye" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+                <button title="Branch"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="git-branch" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+              </div>
             </div>
-            <div class="bg-gradient-to-r from-secondary from-[.5rem] via-primary via-[.5rem] to-primary rounded-[10px] h-52 w-72 md:w-auto  shadow-md shadow-shadow_color">
-
+            <div class="bg-gradient-to-r from-secondary from-[.5rem] via-primary via-[.5rem] to-primary rounded-[10px] h-52 w-72 md:w-auto shadow-md shadow-shadow_color relative p-5 grid grid-rows-[auto_2.25rem]">
+              <div class="row-span-1 flex flex-col gap-2">
+                <p class="font-bold text-icon_color line-clamp-1">Ad Blocker</p>
+                <p class="line-clamp-4 text-sm text-icon_color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus animi non inventore nam eligendi, sed totam exercitationem natus saepe! Esse eum assumenda perspiciatis alias ex. Totam labore necessitatibus laudantium incidunt.</p>
+              </div>
+              <div class="row-span-1 flex flex-row justify-end gap-3">
+                <button title="Add to Favorites"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="star" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+                <button title="View"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="eye" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+                <button title="Branch"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="git-branch" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+              </div>
             </div>
-            <div class="bg-gradient-to-r from-secondary from-[.5rem] via-primary via-[.5rem] to-primary rounded-[10px] h-52 w-72 md:w-auto  shadow-md shadow-shadow_color">
-
+            <div class="bg-gradient-to-r from-secondary from-[.5rem] via-primary via-[.5rem] to-primary rounded-[10px] h-52 w-72 md:w-auto shadow-md shadow-shadow_color relative p-5 grid grid-rows-[auto_2.25rem]">
+              <div class="row-span-1 flex flex-col gap-2">
+                <p class="font-bold text-icon_color line-clamp-1">Money Maker</p>
+                <p class="line-clamp-4 text-sm text-icon_color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus animi non inventore nam eligendi, sed totam exercitationem natus saepe! Esse eum assumenda perspiciatis alias ex. Totam labore necessitatibus laudantium incidunt.</p>
+              </div>
+              <div class="row-span-1 flex flex-row justify-end gap-3">
+                <button title="Add to Favorites"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="star" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+                <button title="View"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="eye" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+                <button title="Branch"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+                  <i data-feather="git-branch" class="inline-block stroke-[3px] size-5"></i>
+                </button>
+              </div>
             </div>
-            
           </div>
         </div>
         
