--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
               <i data-feather="linkedin" class="inline-block stroke-[3px] size-5"></i>
             
             </button>
-            <button title="Notifications"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
-              <i data-feather="bell" id='test' class=" inline-block stroke-[3px] size-5"></i>
+            <button title="Notifications"  class="notif flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+              <i data-feather="bell" class=" inline-block stroke-[3px] size-5"></i>
             </button>
           </div>
         </div>
@@ -63,8 +63,8 @@
             <i data-feather="linkedin" class="inline-block stroke-[3px] size-5"></i>
            
           </button>
-          <button title="Notifications"  class=" flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
-            <i data-feather="bell" id='test' class=" inline-block stroke-[3px] size-5"></i>
+          <button title="Notifications"  class="notif flex flex-row h-9 w-9 self-center items-center justify-center rounded-[10px] hover:bg-hover_color active:text-white active:bg-secondary text-icon_color">
+            <i data-feather="bell" class=" inline-block stroke-[3px] size-5"></i>
           </button>
         </div>
       </div>
@@ -174,7 +174,7 @@
           </div>
           <div class="bg-primary rounded-[10px] h-24 md:h-auto w-full p-3 overflow-x-scroll overflow-y-scroll shadow-md shadow-shadow_color">
             <div class="grid grid-flow-col md:grid-flow-row md:grid-cols-1 grid-rows-1 justify-start items-center h-full md:h-fit w-fit md:w-full gap-2">
-              <div class="w-60 md:w-full h-full md:h-24 px-3 pt-2 border-r-2 md:border-b-2 md:border-r-0 border-contrast hover:bg-hover_color">
+              <div class="rounded-[10px] w-60 md:w-full h-full md:h-24 px-3 pt-2 border-r-2 md:border-b-2 md:border-r-0 border-contrast hover:bg-hover_color">
                 <p class="text-icon_color line-clamp-1 font-bold text-sm">
                   Site Maintence 
                 </p>
@@ -182,7 +182,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, voluptates dolor nesciunt similique tempora dolore enim nisi repellat porro cum modi sapiente itaque consequatur debitis ad, illo veniam iste totam.
                 </p>
               </div>
-              <div class="w-60 md:w-full h-full md:h-24 px-3 pt-2 border-r-2 md:border-b-2 md:border-r-0 border-contrast hover:bg-hover_color">
+              <div class="rounded-[10px] w-60 md:w-full h-full md:h-24 px-3 pt-2 border-r-2 md:border-b-2 md:border-r-0 border-contrast hover:bg-hover_color">
                 <p class="text-icon_color line-clamp-1 font-bold text-sm">
                   Community Share Day
                 </p>
@@ -190,7 +190,7 @@
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut blanditiis labore tenetur odio, accusamus quisquam placeat inventore omnis similique quo nulla culpa earum iusto, non nesciunt repudiandae ullam quibusdam aspernatur.
                 </p>
               </div>
-              <div class="w-60 md:w-full h-full md:h-24 px-3 pt-2 border-r-2 md:border-b-2 md:border-r-0 border-contrast hover:bg-hover_color">
+              <div class="rounded-[10px] w-60 md:w-full h-full md:h-24 px-3 pt-2 border-r-2 md:border-b-2 md:border-r-0 border-contrast hover:bg-hover_color">
                 <p class="text-icon_color line-clamp-1 font-bold text-sm">
                   Updated Privacy Policy
                 </p>
@@ -198,7 +198,7 @@
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora quaerat, doloremque deserunt aut maiores reprehenderit tenetur, nostrum delectus, a nulla earum eaque quibusdam eius commodi qui animi at officiis eum?
                 </p>
               </div>
-              <div class="w-60 md:w-full h-full md:h-24 px-3 pt-2 hover:bg-hover_color">
+              <div class="rounded-[10px] w-60 md:w-full h-full md:h-24 px-3 pt-2 hover:bg-hover_color">
                 <p class="text-icon_color line-clamp-1 font-bold text-sm">
                   Unread Messages
                 </p>
@@ -215,7 +215,7 @@
           </div>
           <div class="bg-primary rounded-[10px] h-24 md:h-auto p-3 overflow-x-scroll overflow-y-scroll shadow-md shadow-shadow_color">
             <div class="grid grid-flow-col md:grid-flow-row md:grid-cols-1 grid-rows-1 justify-start items-center h-full md:h-fit w-fit md:w-full gap-2">
-              <div class="w-60 md:w-full h-full md:h-20 px-3 border-r-2 md:border-b-2 md:border-r-0 border-contrast flex items-center hover:bg-hover_color">
+              <div class="rounded-[10px] w-60 md:w-full h-full md:h-20 px-3 border-r-2 md:border-b-2 md:border-r-0 border-contrast flex items-center hover:bg-hover_color">
                 <div class="grid grid-cols-[auto_1fr] gap-3 w-full">
                   <div class="w-12 h-12 rounded-full overflow-hidden shadow-lg shadow-shadow_color  ">
                     <div class="ml-[-0.24rem] mt-[0.0rem] h-60 w-60">
@@ -228,7 +228,7 @@
                   </div>
                 </div>
               </div>
-              <div class="w-60 md:w-full h-full md:h-20 px-3 border-r-2 md:border-b-2 md:border-r-0 border-contrast flex items-center hover:bg-hover_color">
+              <div class="rounded-[10px] w-60 md:w-full h-full md:h-20 px-3 border-r-2 md:border-b-2 md:border-r-0 border-contrast flex items-center hover:bg-hover_color">
                 <div class="grid grid-cols-[auto_1fr] gap-3 w-full">
                   <div class="w-12 h-12 rounded-full overflow-hidden shadow-lg shadow-shadow_color  ">
                     <div class="ml-[-0.24rem] mt-[-7.6rem] h-60 w-60">
@@ -241,7 +241,7 @@
                   </div>
                 </div>
               </div>
-              <div class="w-60 md:w-full h-full md:h-20 px-3 border-r-2 md:border-b-2 md:border-r-0 border-contrast flex items-center hover:bg-hover_color">
+              <div class="rounded-[10px] w-60 md:w-full h-full md:h-20 px-3 border-r-2 md:border-b-2 md:border-r-0 border-contrast flex items-center hover:bg-hover_color">
                 <div class="grid grid-cols-[auto_1fr] gap-3 w-full">
                   <div class="w-12 h-12 rounded-full overflow-hidden shadow-lg shadow-shadow_color  ">
                     <div class="ml-[-0.24rem] mt-[-4.0rem] h-60 w-60">
@@ -254,7 +254,7 @@
                   </div>
                 </div>
               </div>
-              <div class="w-60 md:w-full h-full md:h-20 px-3 flex items-center hover:bg-hover_color">
+              <div class="rounded-[10px] w-60 md:w-full h-full md:h-20 px-3 flex items-center hover:bg-hover_color">
                 <div class="grid grid-cols-[auto_1fr] gap-3 w-full">
                   <div class="w-12 h-12 rounded-full overflow-hidden shadow-lg shadow-shadow_color  ">
                     <div class="ml-[-11.8rem] mt-[0.0rem] h-60 w-60">
